--- a/WebLegemClient/src/common/directives/escudo-nombre/wl-cinta.directive.html
+++ b/WebLegemClient/src/common/directives/escudo-nombre/wl-cinta.directive.html
@@ -12,6 +12,6 @@
         <polygon id="svg_image" points="0,0 1000,0 1000,500 500,1000 0,500" fill="url(#rgrad)"></polygon>
     </svg>
     <div class="contenedor_nombre_escudo">
-        <img class="escudo_pagina" src="recursos/header/udenar_bl.png" />
+        <span class="escudo-udenar" style="fill:white; color:white; font-size:90px; top:10px;position:absolute; left:30px;"></span>
     </div>
 </div>
