--- a/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
+++ b/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
@@ -1,6 +1,6 @@
 ﻿<div ng-if="false" class="tarjeta_busqueda" ng-repeat="documento in vm.arregloDocs | orderBy: vm.predicate: vm.reverse">
 
-    <div class="titulo_tarjeta">        
+    <div class="titulo_tarjeta">
         <a ng-click="vm.ver(documento.archivo)">{{ documento.tipoDocumento.nombre }} {{ documento.numero }} del {{ documento.fechaPublicacion | date: 'yyyy' }}</a>
     </div>
 
@@ -16,12 +16,11 @@
     <div class="control_tarjeta">
         <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
             <span class="ico-download"></span>Descargar
-        </a> 
-    </div>    
+        </a>
+    </div>
 </div>
 
 <!-- Mocks de Andres -->
-
 <!-- ***********************************************
     QUITAAAAAAAAAAAAAAAAAAAAAAAAR LA PRIMERA PARTE DE
     LA COMPROBACION, SOLO CREADA PARA EL MOCK DE ANDRES
@@ -43,8 +42,15 @@
     </div>
 
     <div class="control_tarjeta">
+        <a ng-click="vm.infoAnotacion = !vm.infoAnotacion; vm.anotaciones = documento; ">
+            <span class="ico-sticky-note-o"></span>Anotado
+        </a>
         <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
             <span class="ico-download"></span>Descargar
         </a>
+
     </div>
 </div>
+
+<!--El modal esta fuera del ng-repeat-->
+<info-anotacion ng-if="vm.infoAnotacion" show="vm.infoAnotacion" datos="vm.anotaciones"></info-anotacion>
