--- a/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
+++ b/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
@@ -9,7 +9,11 @@
         </div>
         <div class='ng-modal-dialog-content'>
             <h5>Informacion del rol de administracion</h5>
-        </div><!--contenido personalisable-->
+            {{ rol.permisos }}
+        </div>
 
+        <div>
+            
+        </div>
     </div>
 </div>
