--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -109,6 +109,16 @@
     <script src="app/usuarios/usuarios.controller.js"></script>
     <script src="app/usuarios/cuenta/cuenta.controller.js"></script>
 
+    <!-- Anotacion -->
+    <script src="app/anotacion/anotacion.dependencies.js"></script>
+    <script src="app/anotacion/anotacion.controller.js"></script>
+    <script src="app/anotacion/anotacion.routes.js"></script>
+
+    <!-- Auditoria -->
+    <script src="app/auditoria/auditoria.dependencies.js"></script>
+    <script src="app/auditoria/auditoria.controller.js"></script>
+    <script src="app/auditoria/auditoria.routes.js"></script>
+
     <!-- Mocks -->
     <script src="common/mocks/common.mocks.dependencies.js"></script>
     <script src="common/mocks/tipo-documento-resource.mock.js"></script>
@@ -132,6 +142,9 @@
     <script src="common/services/permisos-resource.service.js"></script>
     <script src="common/services/usuarios-resource.service.js"></script>
 
+    <!-- Filters -->
+    <script src="common/filters/common.filters.js"></script>
+
     <!--Estilos-->
     <link href="css/elementos/text_area.css" rel="stylesheet" />
     <link href="css/elementos/input_text.css" rel="stylesheet" />
@@ -139,12 +152,12 @@
     <link href="css/elementos/select.css" rel="stylesheet" />
     <link href="css/elementos/listado.css" rel="stylesheet" />
     <link href="css/elementos/barra_navegacion.css" rel="stylesheet" />
-    <link href="css/elementos/boton_movedizo.css" rel="stylesheet" />
     <link href="css/elementos/mini_search.css" rel="stylesheet" />
     <link href="css/elementos/imagen_inicial.css" rel="stylesheet" />
     <link href="css/elementos/gadget_control_entidad.css" rel="stylesheet" />
     <link href="css/elementos/uploader.css" rel="stylesheet" />
     <link href="css/elementos/tabs.css" rel="stylesheet" />
+    <link href="css/elementos/tabla.css" rel="stylesheet" />
     <link href="css/plantillas/informacion_documento.css" rel="stylesheet" />
     <link href="css/plantillas/tipo_documento.css" rel="stylesheet" />
     <link href="css/principal.css" rel="stylesheet" />
@@ -155,7 +168,6 @@
     <link href="css/plantillas/tipo_entidad.css" rel="stylesheet" />
     <link href="css/plantillas/busqueda.css" rel="stylesheet" />
     <link href="css/plantillas/gestion_documental.css" rel="stylesheet" />
-    <link href="css/plantillas/mini_footer.css" rel="stylesheet" />
     <link href="css/plantillas/usuarios.css" rel="stylesheet" />
     <link href="css/plantillas/anotacion.css" rel="stylesheet" />
 
@@ -163,9 +175,8 @@
     <link href="css/elementos/switch.css" rel="stylesheet" />
     <link href="css/plantillas/layout_general.css" rel="stylesheet" />
 
-    <!--<link href="css/contraste/contrasteAlto.css " rel="stylesheet" ng-if="vm.$rootScope.val_contraste == 0" />
-    <link href="css/contraste/contrasteNormal.css" rel="stylesheet" ng-if="vm.$rootScope.val_contraste == 1" />-->
-
+    <link href="css/contraste/contrasteAlto.css " rel="stylesheet" ng-if="vm.$rootScope.val_contraste == 0" />
+    <link href="css/contraste/contrasteNormal.css" rel="stylesheet" ng-if="vm.$rootScope.val_contraste == 1" />
     <!--Iconografia-->
     <link href="iconografia/iconos-legem/styles.css" rel="stylesheet" />
     <link href="iconografia/iconos-legem2/style.css" rel="stylesheet" />
@@ -192,7 +203,7 @@
     <link href="fuentes/Raleway-Medium/fonts.css" rel="stylesheet" />
 
     <!--Estilos Directivas-->
-    <link href="css/plantillas/footer.css" rel="stylesheet" />
+    <link href="css/directivas/footer.css" rel="stylesheet" />
     <link href="css/plantillas/news.css" rel="stylesheet" />
     <link href="css/directivas/filtro_busqueda.css" rel="stylesheet" />
     <link href="css/directivas/sort_busqueda.css" rel="stylesheet" />
