--- a/WebLegemClient/src/common/directives/footer/wlegem-footer.directive.html
+++ b/WebLegemClient/src/common/directives/footer/wlegem-footer.directive.html
@@ -22,7 +22,7 @@
             <br />
             <img src="recursos/footer/valid-css-blue.png" />
             <img src="recursos/footer/valid-html40-blue.png" />
-            <br /><b>Desarrollado por</b><br />
+            <br />Desarrollado por:<br />
             Adriana Rodriguez - Andres Solarte - Mario Florez
         </div>
     </div>
