constantes, servicios y funcion para cambiar de lenguage, falta aplicarlo a todos los controladores y templates

--- a/WebLegemClient/src/common/directives/header/wlegem-header.directive.html
+++ b/WebLegemClient/src/common/directives/header/wlegem-header.directive.html
@@ -100,7 +100,7 @@
                         <p>Ingles</p>
                     </button>
                 </li>
-                <label><span class="ico2-font-size"></span>Tamaño fuente</label>
+                <label><span class="ico2-font-size"></span>{{ vm.language.strings.tamanoFuente }}</label>
                 <li>
                     <button class="boton_accesibilidad fuente1" ng-click="vm.funcion_tamano('fuente1',$event)">
                         <span class="ico-font"></span>
