--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -38,6 +38,9 @@
     <script src="app/app.core.constants.js"></script>
     <script src="app/app.core.values.js"></script>
     <script src="app/homeController.js"></script>
+    <script src="app/app.language.es.js"></script>
+    <script src="app/app.language.en.js"></script>
+    <script src="app/app.language.current.js"></script>
 
     <!-- Components -->
     <script src="common/components/wlegem-admin-crud/wlegem-admin-crud.controller.js"></script>
