tipos anotaciones full stack, y anotaciones db y modelos, faltan triggers y servicios

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -70,6 +70,9 @@
     <script src="common/components/wl-lista-usuarios/wl-lista-usuarios.controller.js"></script>
     <script src="common/components/wl-lista-usuarios/wl-lista-usuarios.directive.js"></script>
 
+    <script src="common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.controller.js"></script>
+    <script src="common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.directive.js"></script>
+
 
     <!-- Login -->
     <script src="app/login/login.js"></script>
@@ -232,7 +235,7 @@
     <script src="common/directives/header/wlegem-header.controller.js"></script>
     <script src="common/directives/info-rol/info-rol.controller.js"></script>
     <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.controller.js"></script>
-    <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.js"></script>
+    <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.js"></script>    
 
     <!--<link href="css/normalize.css" rel="stylesheet" />-->
     <link href="css/animacion_carga.css" rel="stylesheet" />
