arreglos en index

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -119,6 +119,9 @@
     <script src="app/anotacion/anotacion.dependencies.js"></script>
     <script src="app/anotacion/anotacion.controller.js"></script>
     <script src="app/anotacion/anotacion.routes.js"></script>
+    <script src="app/anotacion/crear-anotacion/crear-anotacion.controller.js"></script>
+    <script src="app/anotacion/editar-anotacion/editar-anotacion.controller.js"></script>
+    <script src="app/anotacion/eliminar-anotacion/eliminar-anotacion.controller.js"></script>
 
     <!-- Auditoria -->
     <script src="app/auditoria/auditoria.dependencies.js"></script>
@@ -228,18 +231,41 @@
     <script src="common/directives/header/wlegem-header.directive.js"></script>
     <script src="common/directives/escudo-nombre/wlegem-escudo-nombre.directive.js"></script>
     <script src="common/directives/wl-eventos/wl-eventos.directive.js"></script>
+    <script src="common/components/wl-modal/wl-modal.directive.js"></script>
 
     <script src="common/directives/info-anotacion/info-anotacion.directive.js"></script>
     <script src="common/directives/info-anotacion/info-anotacion.controller.js"></script>
 
+    <script src="common/components/wl-buscar-doc/wl-buscar-doc.controller.js"></script>
+    <script src="common/components/wl-buscar-doc/wl-buscar-doc.directive.js"></script>
+
     <script src="common/directives/header/wlegem-header.controller.js"></script>
     <script src="common/directives/info-rol/info-rol.controller.js"></script>
     <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.controller.js"></script>
-    <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.js"></script>    
+    <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.js"></script> 
+    <script src="common/components/wl-lista-doc-encontrado/wl-lista-doc-encontrado.controller.js"></script>
+    <script src="common/components/wl-lista-doc-encontrado/wl-lista-doc-encontrado.directive.js"></script>
+    <script src="common/components/wl-info/wl-info.directive.js"></script>
+    <script src="common/components/wl-progreso/wl-progreso.controller.js"></script>
+    <script src="common/components/wl-progreso/wl-progreso.directive.js"></script>
+    <script src="common/directives/anotacion-asistida/wl-anotacion-asistida.controller.js"></script>
+    <script src="common/directives/anotacion-asistida/wl-anotacion-asistida.directive.js"></script>
+    <script src="common/directives/asociar-documento/asociar-documento.controller.js"></script>
+    <script src="common/directives/asociar-documento/asociar-documento.directive.js"></script>
+    <script src="common/components/wl-lista-ano-encontrado/wl-lista-ano-encontrado.controller.js"></script>
+    <script src="common/components/wl-lista-ano-encontrado/wl-lista-ano-encontrado.directive.js"></script>
+    <script src="common/components/wl-lista-anotaciones/wl-lista-anotaciones.controller.js"></script>
+    <script src="common/components/wl-lista-anotaciones/wl-lista-anotaciones.directive.js"></script>
 
     <!--<link href="css/normalize.css" rel="stylesheet" />-->
     <link href="css/animacion_carga.css" rel="stylesheet" />
-
+    <link href="css/componentes/modales.css" rel="stylesheet" />
+    <link href="css/componentes/wl-lista-anotaciones.css" rel="stylesheet" />
+    <link href="css/componentes/wl-progreso.css" rel="stylesheet" />
+    <link href="css/directivas/info-anotacion-directive.css" rel="stylesheet" />
+    <link href="css/directivas/lista-ano-encontrado.css" rel="stylesheet" />
+    <link href="css/directivas/lista-doc-encontrado.css" rel="stylesheet" />
+    <link href="css/componentes/wl-progreso.css" rel="stylesheet" />
     <script src="scripts/generales.js"></script>
 
 
